@@ -1433,9 +1433,7 @@ TclWinSerialReopen(
     CONST TCHAR *name,
     DWORD access)
 {
-    ThreadSpecificData *tsdPtr;
-
-    tsdPtr = SerialInit();
+    SerialInit();
 
     /*
      * Multithreaded I/O needs the overlapped flag set otherwise
